name:                dvdrip
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dvdrip#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           2017 Moritz Schulte
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dvdrip
  hs-source-dirs:      src
  ghc-options:         -Wall -O
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , LambdaCase
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , lens
                     , xml-conduit
                     , extra
                     , containers
                     , async-timer
                     , lifted-async
                     , process-extras
                     , safe-exceptions
                     , temporary
                     , directory
                     , formatting
                     , regex-tdfa
                     , text
                     , optparse-applicative
  other-modules:       Paths_dvdrip
